Fix alignment issue in notification box

--- a/style/style.css
+++ b/style/style.css
@@ -887,7 +887,7 @@ input[type=radio]:checked ~ label{
 }
 
 .notification-icon{
-	font-weight: 600;
+	text-align: right
 	font-size: 1.2em;
 	color: #444;
 }
